[package]
name = "clique-db"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Artemis <me@arty.li>"]
description = "A library for interacting with the Clique database."

[features]
default = ["q_get_user", "q_get_points", "q_insert_message", "q_insert_user"]
q_get_user = []
q_get_points = []
q_insert_message = []
q_insert_user = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "array-impls"]}
postgres-protocol = "0.6"
fallible-iterator = "0.2"
chrono = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
